Fixes super-strange Flex-Grid-Bug on Mobile-Size … nobody knows for certain _why_ this works, tho'
SRFCMSAL-2039

--- a/source/_patterns/20-molecules/teaser/teaser.scss
+++ b/source/_patterns/20-molecules/teaser/teaser.scss
@@ -890,6 +890,7 @@
   align-items: stretch;
   flex-direction: column;
   justify-content: flex-end;
+  max-height: 100%;
 }
 /* autoprefixer grid: off */
 
